<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/firstFragment">

    <!-- Fragmento 1: Início -->

    <fragment
        android:id="@+id/firstFragment"
        android:name="edu.ifsul.musart.FirstFragment"
        android:label="@string/fragmento1_label"
        tools:layout="@layout/fragment_first">
        <action
            android:id="@+id/action_firstFragment_to_thirdFragment"
            app:destination="@id/thirdFragment" />
        <action
            android:id="@+id/action_firstFragment_to_secondFragment"
            app:destination="@id/secondFragment" />
    </fragment>

    <!-- Fragmento 2: Sobre -->

    <fragment
        android:id="@+id/secondFragment"
        android:name="edu.ifsul.musart.SecondFragment"
        android:label="@string/fragmento2_label"
        tools:layout="@layout/fragment_second">
        <action
            android:id="@+id/action_secondFragment_to_firstFragment"
            app:destination="@id/firstFragment" />
    </fragment>

    <!-- Fragmento 3: Compra de Ingresso -->

    <fragment
        android:id="@+id/thirdFragment"
        android:name="edu.ifsul.musart.ThirdFragment"
        android:label="@string/fragmento3_label"
        tools:layout="@layout/fragment_third">
        <action
            android:id="@+id/action_thirdFragment_to_firstFragment"
            app:destination="@id/firstFragment" />
        <action
            android:id="@+id/action_thirdFragment_to_secondFragment"
            app:destination="@id/secondFragment" />
    </fragment>

</navigation>